Corrgindo um bug no z-index dos menus

--- a/estilos/basic-styles.css
+++ b/estilos/basic-styles.css
@@ -263,7 +263,7 @@ body {
     min-width: 150px;
     border: 1px solid #ddd;
     border-radius: 3px;
-    z-index: 1;
+    z-index: 15;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -287,5 +287,5 @@ body {
 }
 
 @media screen and (max-width: 728px){
-    
+
 }
