--- a/estilos/header-footer-styles.css
+++ b/estilos/header-footer-styles.css
@@ -284,7 +284,7 @@
             height: 100%;
             background-color: rgba(0, 0, 0, 0.7);
             display: none;
-            z-index: 10;
+            z-index: 24;
       }
 
       .overlay-transparent {
@@ -295,7 +295,7 @@
             height: 100%;
             background-color: transparent;
             display: none;
-            z-index: 9;
+            z-index: 14;
       }
 
       .overlay.active {
@@ -316,7 +316,7 @@
             background-color: #F4F4F4;
             transform: translateX(-100%);
             transition: transform 0.3s ease-in-out;
-            z-index: 11;
+            z-index: 25;
       }
       
       .menu.active {
